--- a/study.html
+++ b/study.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/page-study.css">
+  <link rel="stylesheet" href="/styles/partials/header.css">
 
   <title>Proffy</title>
 </head>
